fix getAllPublicationForLibrarian