@@ -1,12 +1,12 @@
 package com.library.catalog.application.usecase.publication;
 
+import com.library.catalog.application.dto.request.GetAllPublicationForLibrarian;
 import com.library.catalog.application.dto.response.PublicationResponse;
 import com.library.catalog.application.mapper.AuthorMapper;
 import com.library.catalog.application.mapper.CategoryMapper;
 import com.library.catalog.application.mapper.PublicationMapper;
 import com.library.catalog.application.mapper.PublisherMapper;
 import com.library.catalog.application.mapper.TagMapper;
-import com.library.shared.dto.PageResponse;
 import com.library.catalog.domain.entities.Author;
 import com.library.catalog.domain.entities.Category;
 import com.library.catalog.domain.entities.Publication;
@@ -18,11 +18,13 @@ import com.library.catalog.domain.repository.ItemRepository;
 import com.library.catalog.domain.repository.PublicationRepository;
 import com.library.catalog.domain.repository.PublisherRepository;
 import com.library.catalog.domain.repository.TagRepository;
+import com.library.shared.dto.PageResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -33,7 +35,7 @@ import java.util.stream.Collectors;
 @Slf4j
 @Service
 @RequiredArgsConstructor
-public class GetAllPublicationsUseCaseImpl implements GetAllPublicationsUseCase {
+public class GetAllPublicationsForLibrarianUseCaseImpl implements GetAllPublicationsForLibrarianUseCase {
 
     private final PublicationRepository publicationRepository;
     private final AuthorRepository authorRepository;
@@ -49,42 +51,21 @@ public class GetAllPublicationsUseCaseImpl implements GetAllPublicationsUseCase 
 
     @Override
     @Transactional(readOnly = true)
-    public PageResponse<PublicationResponse> execute(int page, int size) {
-        log.info("Fetching all publications - page: {}, size: {}", page, size);
+    public PageResponse<PublicationResponse> execute(GetAllPublicationForLibrarian request) {
+        log.info("Searching publications with criteria: {}", request);
 
-        Pageable pageable = PageRequest.of(page, size);
-        Page<Publication> publicationPage = publicationRepository.findAll(pageable);
+        // Build pageable with sorting
+        Pageable pageable = buildPageable(request);
 
-        // Collect all IDs for batch fetching
-        List<Long> publisherIds = publicationPage.getContent().stream()
-            .map(p -> p.getPublisherId().getValue())
-            .distinct()
-            .collect(Collectors.toList());
-
-        List<Long> authorIds = publicationPage.getContent().stream()
-            .flatMap(p -> p.getAuthorIds().stream())
-            .map(aid -> aid.getValue())
-            .distinct()
-            .collect(Collectors.toList());
-
-        List<Long> categoryIds = publicationPage.getContent().stream()
-            .flatMap(p -> p.getCategoryIds().stream())
-            .map(cid -> cid.getValue())
-            .distinct()
-            .collect(Collectors.toList());
-
-        List<Long> tagIds = publicationPage.getContent().stream()
-            .flatMap(p -> p.getTagIds().stream())
-            .map(tid -> tid.getValue())
-            .distinct()
-            .collect(Collectors.toList());
+        // Search using Specification pattern
+        Page<Publication> publicationPage = publicationRepository.getAllPublicationForLibrarian(request, pageable);
 
         // Batch fetch related entities
         Map<Long, Publisher> publisherMap = publisherRepository.findAll().stream()
             .collect(Collectors.toMap(p -> p.getId().getValue(), p -> p));
 
         Map<Long, Author> authorMap = authorRepository.findAll().stream()
-                .collect(Collectors.toMap(a -> a.getId().getValue(), a -> a));
+            .collect(Collectors.toMap(a -> a.getId().getValue(), a -> a));
 
         Map<Long, Category> categoryMap = categoryRepository.findAll().stream()
             .collect(Collectors.toMap(c -> c.getId().getValue(), c -> c));
@@ -123,7 +104,7 @@ public class GetAllPublicationsUseCaseImpl implements GetAllPublicationsUseCase 
                     tagMapper
                 );
             })
-            .collect(Collectors.toList());
+            .toList();
 
         return PageResponse.of(
             responses,
@@ -136,53 +117,20 @@ public class GetAllPublicationsUseCaseImpl implements GetAllPublicationsUseCase 
         );
     }
 
-    @Override
-    @Transactional(readOnly = true)
-    public List<PublicationResponse> execute() {
-        List<Publication> publicationList = publicationRepository.findAll();
-        Map<Long, Publisher> publisherMap = publisherRepository.findAll().stream()
-                .collect(Collectors.toMap(p -> p.getId().getValue(), p -> p));
+    private Pageable buildPageable(GetAllPublicationForLibrarian request) {
+        if (request.sortBy() != null && !request.sortBy().isBlank()) {
+            Sort.Direction direction =
+                request.direction() == GetAllPublicationForLibrarian.SortDirection.DESC
+                    ? Sort.Direction.DESC
+                    : Sort.Direction.ASC;
 
-        Map<Long, Author> authorMap = authorRepository.findAll().stream()
-                .collect(Collectors.toMap(a -> a.getId().getValue(), a -> a));
-
-        Map<Long, Category> categoryMap = categoryRepository.findAll().stream()
-                .collect(Collectors.toMap(c -> c.getId().getValue(), c -> c));
-
-        Map<Long, Tag> tagMap = tagRepository.findAll().stream()
-                .collect(Collectors.toMap(t -> t.getId().getValue(), t -> t));
-
-        // Map to responses
-        return publicationList.stream()
-                .map(publication -> {
-                    Publisher publisher = publisherMap.get(publication.getPublisherId().getValue());
-                    List<Author> authors = publication.getAuthorIds().stream()
-                        .map(aid -> authorMap.get(aid.getValue()))
-                        .toList();
-                    List<Category> categories = publication.getCategoryIds().stream()
-                        .map(cid -> categoryMap.get(cid.getValue()))
-                        .toList();
-                    List<Tag> tags = publication.getTagIds().stream()
-                        .map(tid -> tagMap.get(tid.getValue()))
-                        .toList();
-
-                    long totalItems = itemRepository.countByPublicationId(publication.getId());
-                    long availableItems = itemRepository.countAvailableByPublicationId(publication.getId());
-
-                    return publicationMapper.toResponse(
-                        publication,
-                        publisher,
-                        authors,
-                        categories,
-                        tags,
-                        totalItems,
-                        availableItems,
-                        authorMapper,
-                        publisherMapper,
-                        categoryMapper,
-                        tagMapper
-                    );
-                })
-                .collect(Collectors.toList());
+            return PageRequest.of(
+                request.page(),
+                request.size(),
+                Sort.by(direction, request.sortBy())
+            );
+        }
+        return PageRequest.of(request.page(), request.size());
     }
+
 }
